# NMPC

./: CMakeLists.txt
.github/workflows/: ci-colcon.yaml
nmpc/: CMakeLists.txt
nmpc_cgmres/: CMakeLists.txt  README.md
nmpc_cgmres/tests/: CMakeLists.txt
nmpc_ddp/: CMakeLists.txt  README.md
nmpc_ddp/tests/: CMakeLists.txt
nmpc_ddp/tests/test/: TestDDPCartPole.test.py
nmpc_fmpc/: CMakeLists.txt  README.md  package.xml
nmpc_fmpc/tests/: CMakeLists.txt
nmpc_fmpc/tests/src/: TestFmpcCartPole.cpp
nmpc_fmpc/tests/test/: TestFmpcCartPole.test.py
